--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colégio Laranjeiras do Sul</title>
+    <title>Agrinho: do campo à cidade, colhendo oportunidades</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,22 +12,22 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="laranjeiras.png" alt="logo do Colégio Laranjeiras">
+        <img class="cabecalho-imagem" src="agrinho.jpeg" alt="logo do Agrinho">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Programa</li>
+            <li class="cabecalho-lista-item">Participantes</li>
         </ul>
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre o Colégio</h2>
-            <p class="escola-texto-um">O Colégio Estadual Laranjeiras do Sul é um colégio público de excelente qualidade e está localizado em R. Cap. Antônio Joaquim de Camargo, 842 - Centro, Laranjeiras do Sul</p>
-            <p class="escola-texto-dois">O colégio possui alunos excelentes que já conquistaram inúmeras medalhas olímpicas</p>
+            <h2 class="escola-titulo">Sobre o Programa</h2>
+            <p class="escola-texto-um">O programa foi criado em 2017, para ser feito um concurso dos melhores projetos desenvolvidos e o tema escolhido do ano de 2024 foi Agrinho: do campo à cidade, colhendo oportunidades</p>
+            <p class="escola-texto-dois">O concurso possui inumeros ganhadores </p>
         </div>
-        <img class="escola-imagem" src="Professor-rafiki.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="g_20210510_124906_91.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos alunos?</h2>
+        <h2 class="estudante-titulo">Quem são nossos participantes?</h2>
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
@@ -94,7 +94,7 @@
     </div>
     </section>
     <footer class="rodape">
-        <img class="rodape-imagem"src="laranjeiras.png" alt="logo da alura start">
+        <img class="rodape-imagem"src="agrinho.jpeg" alt="logo da alura start">
     </footer>
 </body>
 </html>
